# encoding

./: .gitignore  HISTORY.md  README.md
core/code/: Makefile.am  configure.ac
core/code/detection/: converter.cpp  converter.h  detection.cpp  detection.h  generate_makefile.sh
core/code/main/: Makefile.am  epoch.cpp
core/code/share/: commondef.h
core/code/share/detection/: converter_inteface.h  detection_interface.h
core/code/share/utilities/: memory_interface.h
core/code/utilities/memoryblock/: memoryblock.cpp  memoryblock.h
core/tools/make4linux/: generate_makefile_am.sh  makefull.sh  readme.txt
core/tools/make4windows/: make.bat  premake.lua  readme.txt
core/tools/premake/: make.bat  premake.lua  readme.txt
docs/api/: encoding_API.md
