#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

#AC_PREREQ([2.63])
AC_INIT(main/epoch.cpp)
AM_INIT_AUTOMAKE(epoch,0.1.0,347070901@qq.com)
#AC_CONFIG_HEADER([config.h])
AC_DEFINE(_DEBUG,1,debug)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL
#AC_PROG_RANLIB       #use static library to compile, need this macro

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile 
	detection/Makefile)

